--- a/SwiftUIApp/Tehilim2.0.xcodeproj/xcshareddata/xcschemes/macOS.xcscheme
+++ b/SwiftUIApp/Tehilim2.0.xcodeproj/xcshareddata/xcschemes/macOS.xcscheme
@@ -28,6 +28,16 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "B7CA459624AC653C00D3AAEC"
+               BuildableName = "Tests macOS.xctest"
+               BlueprintName = "Tests macOS"
+               ReferencedContainer = "container:Tehilim2.0.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
